--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,36 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Intent 1"
+        android:text="gallery"
+        android:textColor="@color/colorPrimary"
         android:id="@+id/btn_intent_1"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Intent 2"
+        android:textColor="@color/colorPrimary"
+        android:text="call"
         android:id="@+id/btn_intent_2"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Intent 3"
+        android:text="facebook"
+        android:textColor="@color/colorPrimary"
         android:id="@+id/btn_intent_3"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Intent 4"
+        android:text=" open camera"
+        android:textColor="@color/colorPrimary"
         android:id="@+id/btn_intent_4"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:text="Intent 5"
+        android:textColor="@color/colorPrimary"
         android:id="@+id/btn_intent_5"/>
 
 </LinearLayout>
